--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     
       <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
-      />
+      </link>
       <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.js">
       </script>
@@ -16,7 +16,7 @@
       </script>
       <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/theme/monokai.min.css">
-      />
+      </link>
   </head>
   <body>
     <nav id="navbar">
@@ -26,8 +26,8 @@
      <h1> Just Another Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="./assets/icons/icon_96x96.png"
-          /></div>
+            ><img src="./assets/icons/icon_96x96.png"/>
+      </div>
     </nav>
 
     <main id="main">
